# dockerized_training_environment

./: .gitignore  .gitmodules  LICENSE  README.md  aggregate_auth.py  aggregate_auth_no_create.py  change_org_admin.py  cleanup_instances.py  copy_file.py  direct_call.py  feeds.py  generic_config.py  get_certificates.py  init_dockers.py  init_misps.py  misp_instances.py  mypy.ini  pyproject.toml  refresh_dockers.py  refresh_misps.py  reset_user_password.py  setup_nginx.py  setup_sync.py  start_misps.py  start_nginx.py  stop_misps.py  stop_nginx.py  trigger_sync.py  update_jsons.py  update_misps.py  update_timeouts.py
