[tool.poetry]
name = "misp_training_environment"
version = "0.1.0"
description = ""
authors = ["Raphaël Vinot <raphael@vinot.info>"]

[tool.poetry.dependencies]
python = "^3.8"
gitpython = "^3.1.32"
pymisp = "^2.4.174"
pyyaml = "^6.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
ipython = [
    {version = "<8.13.0", python = "<3.9"},
    {version = "^8.13.0", python = ">=3.9"}
]
mypy = "^1.5.1"
types-PyYAML = "^6.0.12.11"

[build-system]
requires = ["poetry_core>=1.0", "setuptools"]
build-backend = "poetry.core.masonry.api"
