[project]
name = "misp_training_environment"
version = "0.1.0"
description = ""
authors = [{name="Raphaël Vinot", email="raphael@vinot.info>"}]
requires-python = ">=3.12,<4.0"

dependencies = [
    "gitpython (>3.1.42)",
    "pymisp (>2.4.188)",
    "pyyaml (>6.0.1)"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ipython = "^8.32.0"
mypy = "^1.15.0"
types-PyYAML = "^6.0.12.20241230"

[build-system]
requires = ["poetry_core>=2.0"]
build-backend = "poetry.core.masonry.api"
